--- a/index.html
+++ b/index.html
@@ -7,8 +7,9 @@
     <title>Todo</title>
 </head>
 <body>
-
 <main class="main-container">
+   
+    </div>
     <div class="input-wrapper">
     <label for="task-to-add">Add your task!</label>
     <input type="text" name="title-to-add" id="title-to-add" placeholder="Enter a title...">
